syntax = "proto3";

package kong.model;

import "kong/model/service.proto";

option go_package = "github.com/kong/koko/internal/gen/wrpc/kong/model;model";

message Route {
  string id = 1;
  string name = 2;
  map<string, HeaderValues> headers = 3;
  repeated string hosts = 4;
  int64 created_at = 5;
  repeated string methods = 6;
  repeated string paths = 7;
  string path_handling = 8;
  bool preserve_host = 9;
  repeated string protocols = 10;
  int64 regex_priority = 11;
  bool strip_path = 12;
  int64 updated_at = 13;
  repeated string snis = 14;
  repeated CIDRPort sources = 15;
  repeated CIDRPort destinations = 16;
  repeated string tags = 17;
  int64 https_redirect_status_code = 18;
  bool request_buffering = 19;
  bool response_buffering = 20;
  Service service = 21;
}

message HeaderValues {
  repeated string values = 1;
}

message CIDRPort {
  string ip = 1;
  int64 port = 2;
}
